--- a/Bip the Guy/Base.lproj/Main.storyboard
+++ b/Bip the Guy/Base.lproj/Main.storyboard
@@ -1,26 +1,89 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Bip_the_Guy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleAspectFit" id="8bC-Xf-vdC">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image00" translatesAutoresizingMaskIntoConstraints="NO" id="Cyj-9a-BNX">
+                                <rect key="frame" x="20" y="35" width="728" height="418"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="HkN-oj-oC8" appends="YES" id="2SS-fV-eCM"/>
+                                </connections>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="Hwk-Do-60y">
+                                <rect key="frame" x="281.5" y="489" width="204" height="419"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ymC-hg-BXu">
+                                        <rect key="frame" x="0.0" y="0.0" width="92" height="419"/>
+                                        <state key="normal" title="Photo Library"/>
+                                        <connections>
+                                            <action selector="photoLibraryButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="brw-xd-UIG"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jne-kJ-HUc">
+                                        <rect key="frame" x="127" y="0.0" width="77" height="419"/>
+                                        <state key="normal" title="Take Photo"/>
+                                        <connections>
+                                            <action selector="takePhotoButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BbO-fH-Iyt"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose Image to Punch:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PMq-pS-IXp">
+                                <rect key="frame" x="290.5" y="461" width="187" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="B3j-qX-ggp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Hwk-Do-60y" secondAttribute="bottom" constant="116" id="1A4-bC-qot"/>
+                            <constraint firstItem="Cyj-9a-BNX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="9Th-iV-2Qb"/>
+                            <constraint firstItem="PMq-pS-IXp" firstAttribute="centerX" secondItem="Hwk-Do-60y" secondAttribute="centerX" id="Cgk-ob-8hd"/>
+                            <constraint firstItem="PMq-pS-IXp" firstAttribute="top" secondItem="Cyj-9a-BNX" secondAttribute="bottom" constant="8" symbolic="YES" id="Jq9-ql-YK7"/>
+                            <constraint firstItem="Cyj-9a-BNX" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="eiC-7E-Xvg"/>
+                            <constraint firstItem="Cyj-9a-BNX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="15" id="epF-Bs-lUk"/>
+                            <constraint firstItem="Cyj-9a-BNX" firstAttribute="centerX" secondItem="PMq-pS-IXp" secondAttribute="centerX" id="exb-nJ-AQA"/>
+                            <constraint firstItem="Hwk-Do-60y" firstAttribute="top" secondItem="PMq-pS-IXp" secondAttribute="bottom" constant="8" symbolic="YES" id="pAN-2o-Txu"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageToPunch" destination="Cyj-9a-BNX" id="Fs2-oR-uxT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="HkN-oj-oC8">
+                    <connections>
+                        <action selector="imageTapped:" destination="BYZ-38-t0r" id="X5I-RL-wDj"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="135.19999999999999" y="136.28185907046478"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="image00" width="330" height="418"/>
+    </resources>
 </document>
